[metadata]
name = antlr4-python3-runtime
version = 4.12.0
author = Eric Vergnaud, Terence Parr, Sam Harwell
author_email = eric.vergnaud@wanadoo.fr
license = BSD
description = ANTLR 4.12.0 runtime for Python 3
url = http://www.antlr.org

[options]
package_dir =
     = src
packages =
    antlr4
    antlr4.atn
    antlr4.dfa
    antlr4.tree
    antlr4.error
    antlr4.xpath
install_requires = typing ; python_version<'3.5'

[options.entry_points]
console_scripts = pygrun=antlr4._pygrun:main
